AnalizadorSintactico.output
Grammar

    0 $accept: objetivo $end

    1 objetivo: programa

    2 programa: INICIO listaDeSentencias FIN

    3 listaDeSentencias: sentencia ';' listaDeSentencias
    4                  | sentencia ';'

    5 sentencia: declaracion
    6          | asignacion
    7          | entradaSalida

    8 declaracion: ε
    9            | declaracionInt
   10            | CONST declaracionInt ASIGNACION expresion
   11            | declaracionString
   12            | CONST declaracionString ASIGNACION expresion

   13 declaracionInt: INT IDENTIFICADOR

   14 declaracionString: STRING IDENTIFICADOR

   15 asignacion: IDENTIFICADOR ASIGNACION expresion

   16 entradaSalida: ESCRIBIR '(' listaDeExpresiones ')'
   17              | LEER '(' listaDeIdentificadores ')'

   18 listaDeIdentificadores: IDENTIFICADOR ',' listaDeIdentificadores
   19                       | IDENTIFICADOR

   20 listaDeExpresiones: expresion ',' listaDeExpresiones
   21                   | expresion

   22 expresion: primaria operadorAditivo expresion
   23          | primaria

   24 primaria: IDENTIFICADOR
   25         | '(' expresion ')'
   26         | CONSTANTENUMERICA
   27         | LITERALCADENA

   28 operadorAditivo: '+'
   29                | '-'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 17 25
    ')' (41) 16 17 25
    '+' <operador> (43) 28
    ',' (44) 18 20
    '-' <operador> (45) 29
    ';' (59) 3 4
    error (256)
    INICIO (258) 2
    FIN (259) 2
    LEER (260) 17
    ESCRIBIR (261) 16
    INT (262) 13
    STRING (263) 14
    CONST (264) 10 12
    IDENTIFICADOR <id> (265) 13 14 15 18 19 24
    LITERALCADENA <string> (266) 27
    CONSTANTENUMERICA <numerico> (267) 26
    ASIGNACION (268) 10 12 15


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    objetivo (21)
        on left: 1
        on right: 0
    programa (22)
        on left: 2
        on right: 1
    listaDeSentencias (23)
        on left: 3 4
        on right: 2 3
    sentencia (24)
        on left: 5 6 7
        on right: 3 4
    declaracion (25)
        on left: 8 9 10 11 12
        on right: 5
    declaracionInt <posicion> (26)
        on left: 13
        on right: 9 10
    declaracionString <posicion> (27)
        on left: 14
        on right: 11 12
    asignacion (28)
        on left: 15
        on right: 6
    entradaSalida (29)
        on left: 16 17
        on right: 7
    listaDeIdentificadores (30)
        on left: 18 19
        on right: 17 18
    listaDeExpresiones (31)
        on left: 20 21
        on right: 16 20
    expresion <tExp> (32)
        on left: 22 23
        on right: 10 12 15 20 21 22 25
    primaria <tExp> (33)
        on left: 24 25 26 27
        on right: 22 23
    operadorAditivo <operador> (34)
        on left: 28 29
        on right: 22


State 0

    0 $accept: • objetivo $end

    INICIO  shift, and go to state 1

    objetivo  go to state 2
    programa  go to state 3


State 1

    2 programa: INICIO • listaDeSentencias FIN

    LEER           shift, and go to state 4
    ESCRIBIR       shift, and go to state 5
    INT            shift, and go to state 6
    STRING         shift, and go to state 7
    CONST          shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 9

    $default  reduce using rule 8 (declaracion)

    listaDeSentencias  go to state 10
    sentencia          go to state 11
    declaracion        go to state 12
    declaracionInt     go to state 13
    declaracionString  go to state 14
    asignacion         go to state 15
    entradaSalida      go to state 16


State 2

    0 $accept: objetivo • $end

    $end  shift, and go to state 17


State 3

    1 objetivo: programa •

    $default  reduce using rule 1 (objetivo)


State 4

   17 entradaSalida: LEER • '(' listaDeIdentificadores ')'

    '('  shift, and go to state 18


State 5

   16 entradaSalida: ESCRIBIR • '(' listaDeExpresiones ')'

    '('  shift, and go to state 19


State 6

   13 declaracionInt: INT • IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 20


State 7

   14 declaracionString: STRING • IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 21


State 8

   10 declaracion: CONST • declaracionInt ASIGNACION expresion
   12            | CONST • declaracionString ASIGNACION expresion

    INT     shift, and go to state 6
    STRING  shift, and go to state 7

    declaracionInt     go to state 22
    declaracionString  go to state 23


State 9

   15 asignacion: IDENTIFICADOR • ASIGNACION expresion

    ASIGNACION  shift, and go to state 24


State 10

    2 programa: INICIO listaDeSentencias • FIN

    FIN  shift, and go to state 25


State 11

    3 listaDeSentencias: sentencia • ';' listaDeSentencias
    4                  | sentencia • ';'

    ';'  shift, and go to state 26


State 12

    5 sentencia: declaracion •

    $default  reduce using rule 5 (sentencia)


State 13

    9 declaracion: declaracionInt •

    $default  reduce using rule 9 (declaracion)


State 14

   11 declaracion: declaracionString •

    $default  reduce using rule 11 (declaracion)


State 15

    6 sentencia: asignacion •

    $default  reduce using rule 6 (sentencia)


State 16

    7 sentencia: entradaSalida •

    $default  reduce using rule 7 (sentencia)


State 17

    0 $accept: objetivo $end •

    $default  accept


State 18

   17 entradaSalida: LEER '(' • listaDeIdentificadores ')'

    IDENTIFICADOR  shift, and go to state 27

    listaDeIdentificadores  go to state 28


State 19

   16 entradaSalida: ESCRIBIR '(' • listaDeExpresiones ')'

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    listaDeExpresiones  go to state 33
    expresion           go to state 34
    primaria            go to state 35


State 20

   13 declaracionInt: INT IDENTIFICADOR •

    $default  reduce using rule 13 (declaracionInt)


State 21

   14 declaracionString: STRING IDENTIFICADOR •

    $default  reduce using rule 14 (declaracionString)


State 22

   10 declaracion: CONST declaracionInt • ASIGNACION expresion

    ASIGNACION  shift, and go to state 36


State 23

   12 declaracion: CONST declaracionString • ASIGNACION expresion

    ASIGNACION  shift, and go to state 37


State 24

   15 asignacion: IDENTIFICADOR ASIGNACION • expresion

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    expresion  go to state 38
    primaria   go to state 35


State 25

    2 programa: INICIO listaDeSentencias FIN •

    $default  reduce using rule 2 (programa)


State 26

    3 listaDeSentencias: sentencia ';' • listaDeSentencias
    4                  | sentencia ';' •

    LEER           shift, and go to state 4
    ESCRIBIR       shift, and go to state 5
    INT            shift, and go to state 6
    STRING         shift, and go to state 7
    CONST          shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 9

    ';'       reduce using rule 8 (declaracion)
    $default  reduce using rule 4 (listaDeSentencias)

    listaDeSentencias  go to state 39
    sentencia          go to state 11
    declaracion        go to state 12
    declaracionInt     go to state 13
    declaracionString  go to state 14
    asignacion         go to state 15
    entradaSalida      go to state 16


State 27

   18 listaDeIdentificadores: IDENTIFICADOR • ',' listaDeIdentificadores
   19                       | IDENTIFICADOR •

    ','  shift, and go to state 40

    $default  reduce using rule 19 (listaDeIdentificadores)


State 28

   17 entradaSalida: LEER '(' listaDeIdentificadores • ')'

    ')'  shift, and go to state 41


State 29

   24 primaria: IDENTIFICADOR •

    $default  reduce using rule 24 (primaria)


State 30

   27 primaria: LITERALCADENA •

    $default  reduce using rule 27 (primaria)


State 31

   26 primaria: CONSTANTENUMERICA •

    $default  reduce using rule 26 (primaria)


State 32

   25 primaria: '(' • expresion ')'

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    expresion  go to state 42
    primaria   go to state 35


State 33

   16 entradaSalida: ESCRIBIR '(' listaDeExpresiones • ')'

    ')'  shift, and go to state 43


State 34

   20 listaDeExpresiones: expresion • ',' listaDeExpresiones
   21                   | expresion •

    ','  shift, and go to state 44

    $default  reduce using rule 21 (listaDeExpresiones)


State 35

   22 expresion: primaria • operadorAditivo expresion
   23          | primaria •

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46

    $default  reduce using rule 23 (expresion)

    operadorAditivo  go to state 47


State 36

   10 declaracion: CONST declaracionInt ASIGNACION • expresion

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    expresion  go to state 48
    primaria   go to state 35


State 37

   12 declaracion: CONST declaracionString ASIGNACION • expresion

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    expresion  go to state 49
    primaria   go to state 35


State 38

   15 asignacion: IDENTIFICADOR ASIGNACION expresion •

    $default  reduce using rule 15 (asignacion)


State 39

    3 listaDeSentencias: sentencia ';' listaDeSentencias •

    $default  reduce using rule 3 (listaDeSentencias)


State 40

   18 listaDeIdentificadores: IDENTIFICADOR ',' • listaDeIdentificadores

    IDENTIFICADOR  shift, and go to state 27

    listaDeIdentificadores  go to state 50


State 41

   17 entradaSalida: LEER '(' listaDeIdentificadores ')' •

    $default  reduce using rule 17 (entradaSalida)


State 42

   25 primaria: '(' expresion • ')'

    ')'  shift, and go to state 51


State 43

   16 entradaSalida: ESCRIBIR '(' listaDeExpresiones ')' •

    $default  reduce using rule 16 (entradaSalida)


State 44

   20 listaDeExpresiones: expresion ',' • listaDeExpresiones

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    listaDeExpresiones  go to state 52
    expresion           go to state 34
    primaria            go to state 35


State 45

   28 operadorAditivo: '+' •

    $default  reduce using rule 28 (operadorAditivo)


State 46

   29 operadorAditivo: '-' •

    $default  reduce using rule 29 (operadorAditivo)


State 47

   22 expresion: primaria operadorAditivo • expresion

    IDENTIFICADOR      shift, and go to state 29
    LITERALCADENA      shift, and go to state 30
    CONSTANTENUMERICA  shift, and go to state 31
    '('                shift, and go to state 32

    expresion  go to state 53
    primaria   go to state 35


State 48

   10 declaracion: CONST declaracionInt ASIGNACION expresion •

    $default  reduce using rule 10 (declaracion)


State 49

   12 declaracion: CONST declaracionString ASIGNACION expresion •

    $default  reduce using rule 12 (declaracion)


State 50

   18 listaDeIdentificadores: IDENTIFICADOR ',' listaDeIdentificadores •

    $default  reduce using rule 18 (listaDeIdentificadores)


State 51

   25 primaria: '(' expresion ')' •

    $default  reduce using rule 25 (primaria)


State 52

   20 listaDeExpresiones: expresion ',' listaDeExpresiones •

    $default  reduce using rule 20 (listaDeExpresiones)


State 53

   22 expresion: primaria operadorAditivo expresion •

    $default  reduce using rule 22 (expresion)
